# Claudio

./: .env.example  .gitignore  ARCHIVIO.md  AVVIO.md  CATALOGO.md  CLAUDE.md  COME_GIOCARE.md  COMMERCIAL_LICENSING.md  CONTRATTO_ALLODIALE.md  COSTELLAZIONE.md  DIARIO_PERSONALE.md  DICHIARAZIONE_PATERNITA.md  DOWNLOAD_INSTRUCTIONS.txt  DRIVE_LINKS.md  Dockerfile.raffaello  HABIT_TRACKING.md  INTERACTIVE_MODE.md  LICENSE  LINEA_TEMPORALE.md  MANIFESTO_SOPRAVVIVENZA.md  MEMORIA_PROGETTO.md  ORCHESTRAZIONE_DINAMICA.md  ORIENTAMENTO.md  PROFILO_GITHUB_README.md  PROGETTI.md  PROGETTO_BENCHMARK.md  PROGETTO_CORPO.md  PROGETTO_IMPATTO.md  PROGETTO_INTRUDER_ENGINE.md  PROGETTO_R3.md  PROGETTO_RAFFAELLO.md  PROGETTO_ROTTA.md  PROGETTO_SKYID.md  PROGETTO_TAROCCHI.md  QUICKSTART.md  README.md  REGISTRO_DESIDERI.md  SESSIONE.md  SKYID.md  TASK_AUTONOMI.md  (+26 more)
.claude/: settings.json
R3/: .gitignore  LICENSE  README.md  pyproject.toml
R3/.github/workflows/: ci.yml  release.yml
R3/apps/cli/: r3_cli.py
R3/apps/service/controllers/: r3_controller.py
R3/apps/service/repositories/: stato_repository.py
R3/apps/service/services/: r3_service.py
R3/docs/: architecture.md  rituals.md  roadmap.md
R3/r3_core/: __init__.py  config.py  engine.py  pipeline.py  protocol_rosso.py  scacchiera.py
R3/rituals/: mapping.py  triggers.py
R3/rituals/scripts/: attiva.py
R3/tests/: test_core_engine.py  test_pipeline_persistente.py  test_protocol_rosso.py  test_ritual_triggers.py  test_scacchiera.py
allineamento/: ANTHROPIC_CLAUDE.md  DEEPSEEK.md  GEMINI.md  GROK.md  OLLAMA.md  OPENAI.md  (+4 more)
(+665 files in other folders)
